--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,7 +12,7 @@
 
 /*HEADER*/
 header {
-  grid-area: header;
+  display: flex;
 }
 
 .img-logo {
@@ -20,9 +20,6 @@ header {
 }
 
 /*NAVBAR*/
-.navbar {
-  grid-area: nav;
-}
 
 .nav-item.active {
   text-decoration: underline;
@@ -312,22 +309,64 @@ main {
   color: #ffffff;
   background-color: #031424;
 }
-
 /*FORM*/
+/*FORM*/
+form {
+  margin: 50px auto;
+}
 
+.feedback-input {
+  color: white;
+  font-family: "Acme", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  border-radius: 5px;
+  line-height: 22px;
+  background-color: transparent;
+  border: 2px solid #8eaebd;
+  transition: all 0.3s;
+  padding: 13px;
+  margin-bottom: 15px;
+  width: 100%;
+  box-sizing: border-box;
+  outline: 0;
+}
+
+.feedback-input:focus {
+  border: 2px solid #30415d;
+}
+
+textarea {
+  height: 150px;
+  line-height: 150%;
+  resize: vertical;
+}
+
+[type="submit"] {
+  font-family: "Montserrat", Arial, Helvetica, sans-serif;
+  width: 100%;
+  background: #8eaebd;
+  border-radius: 5px;
+  border: 0;
+  cursor: pointer;
+  color: #031424;
+  font-size: 24px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  transition: all 0.3s;
+  margin-top: -4px;
+  font-weight: 700;
+}
+[type="submit"]:hover {
+  background: #30415d;
+}
+
+.contactanos {
+  color: #8eaebd;
+  text-align: center;
+}
 @media (min-width: 992px) {
   .alto {
     height: 100vh;
-  }
-}
-
-@media (min-width: 768px) {
-  body {
-    grid-template-rows: auto 1fr auto;
-    grid-template-columns: 12rem 1fr;
-    grid-template-areas:
-      "header nav"
-      "main main"
-      "footer footer";
   }
 }
