--- a/scss/style.scss
+++ b/scss/style.scss
@@ -142,6 +142,10 @@ footer {
   margin: 10px;
   border-radius: 10px;
 }
+
+.card-text {
+  text-align: justify;
+}
 /*CARD DESTINOS*/
 .container {
   background-color: #08063d00;
