--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,10 @@ footer {
   border-radius: 10px;
 }
 
+.card-text {
+  text-align: justify;
+}
+
 /*CARD DESTINOS*/
 .container {
   background-color: rgba(8, 6, 61, 0);
@@ -309,6 +313,7 @@ main {
 }
 
 /*FORM*/
+/*FORM*/
 form {
   margin: 50px auto;
 }
@@ -340,7 +345,7 @@ textarea {
   resize: vertical;
 }
 
-[type="submit"] {
+[type=submit] {
   font-family: "Montserrat", Arial, Helvetica, sans-serif;
   width: 100%;
   background: #8eaebd;
@@ -356,7 +361,7 @@ textarea {
   font-weight: 700;
 }
 
-[type="submit"]:hover {
+[type=submit]:hover {
   background: #30415d;
 }
 
